--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,11 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Report to ampl w/ Pytelliot
+name: Report to eth/usd on rinkeby w/ pytelliot
 
 on:
-  cron:
+  schedule: 
+  - cron: "* * * * *" 
     
         
 
@@ -32,5 +33,5 @@ jobs:
       run: |
         cp ./config ~/
     - name: report :)
-      run: telliot-examples --legacy-id 10 --submit-once report
+      run: telliot-examples --legacy-id 1 --submit-once report
         
